--- a/index.html
+++ b/index.html
@@ -124,10 +124,11 @@
         <section class="about">
             <div class="container">
                 <div class="about__inner">
-                    <section class="about__content">
+                    <div class="about__content">
                         <p class="about__label">//  About  //</p>
                         <h2 class="about__heading section__heading">Best Agency For
-                            Your Pet.</h2>
+                            Your Pet.
+                        </h2>
                         <p class="about__desc section__desc">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                         </p>
@@ -137,8 +138,8 @@
                             <span class="about__check-item">14+ Years Experience</span>
                             <span class="about__check-item">Pet Parent Of 3 Dogs</span>
                         </section>
-                    </section>
-                    <section class="about__media">
+                    </div>
+                    <div class="about__media">
                         <div class="about__card">
                             <b class="about__card-title">20+</b>
                             <p class="about__card-desc">Years Experience</p>
@@ -148,7 +149,47 @@
                             <img src="./assets/img/about-01.png" alt="" class="about__img">
                             <img src="./assets/icon/about-decor.svg" alt="" class="about__media-decor">
                         </figure>
-                    </section>
+                    </div>
+
+                    <div class="about__media">
+                        <figure class="about__img-wrap about__img-wrap-bottom">
+                            <img src="./assets/img/about-02.png" alt="" class="about__img about__img-bottom">
+                            <div>
+                                <img src="./assets/icon/about-decor-01.svg" alt="" class="about__decor-img">
+                                <img src="./assets/icon/about-decor-02.svg" alt="" class="about__decor-img">
+                                <img src="./assets/icon/about-decor-03.svg" alt="" class="about__decor-img">
+                                <img src="./assets/icon/about-decor-04.svg" alt="" class="about__decor-img">
+                                <img src="./assets/icon/about-decor-05.svg" alt="" class="about__decor-img">
+                                <img src="./assets/icon/about-decor-06.svg" alt="" class="about__decor-img">
+                                <img src="./assets/icon/about-decor-07.svg" alt="" class="about__decor-img">
+                                <img src="./assets/icon/about-decor-08.svg" alt="" class="about__decor-img">
+                            </div>
+                        </figure>
+                    </div>
+                    <div class="about__content">
+                        <h2 class="about__heading about__heading-bottom section__heading">
+                            Taking A Vacation? So Is Your Pet.
+                        </h2>
+                        <p class="about__desc about__desc-bottom section__desc">
+                            We offer long-term and short-term boarding. Every dog has its own private, spacious room and daily individual time in our large play yard.
+                        </p>
+                        <div class="tab">
+                            <ul class="tab__list">
+                                <li class="tab__item tab__item--active">
+                                    <img src="./assets/icon/tab-01.svg" alt="" class="tab__icon">
+                                    <span class="tab__title">Pet Boarding</span>
+                                </li>
+                                <li class="tab__item">
+                                    <img src="./assets/icon/tab-02.svg" alt="" class="tab__icon">
+                                    <span class="tab__title">Pet Daycare</span>
+                                </li>
+                                <li class="tab__item">
+                                    <img src="./assets/icon/tab-03.svg" alt="" class="tab__icon">
+                                    <span class="tab__title">Pet Transport</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
