--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                 <section class="hero__content">
                     <h1 class="hero__heading">Established & Trusted Pet Care Service</h1>
-                    <p class="hero__desc">Discover a wide variety of Pawsitive services to choose from, including daycare, private walks, office duty and spa.</p>
+                    <p class="hero__desc section__desc">Discover a wide variety of Pawsitive services to choose from, including daycare, private walks, office duty and spa.</p>
                     <div class="hero-cta">
                         <div class="hero-cta__btn">
                             <a href="#!" class="btn btn--primary hero-cta__link">Book a Meet
@@ -125,7 +125,7 @@
             <div class="container">
                 <div class="about__inner">
                     <div class="about__content">
-                        <p class="about__label">//  About  //</p>
+                        <p class="section__label">//  About  //</p>
                         <h2 class="about__heading section__heading">Best Agency For
                             Your Pet.
                         </h2>
@@ -208,7 +208,7 @@
             <div class="container">
                 <div class="service__inner">
                     <div class="service__top">
-                        <p class="service__label">What we do for you?</p>
+                        <p class="section__label">What we do for you?</p>
                         <h2 class="service__heading section__heading">Our Services</h2>
                     </div>
                     <div class="service__body">
@@ -244,7 +244,7 @@
                                 <img src="./assets/img/service-01.png" alt="#!" class="service__img">
                             </figure>
                             <div class="service__cta-wrap">
-                                <a href="#!" class="btn service__cta">View All Services</a>
+                                <a href="#!" class="btn btn--white service__cta">View All Services</a>
                             </div>
                         </div>
                         <div class="service__column">
@@ -274,6 +274,83 @@
                                 <a href="#!" class="service-item__more">Read More</a>
                             </article>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- member -->
+        <section class="member">
+            <div class="container">
+                <div class="member__inner">
+                    <div class="member__top">
+                        <p class="section__label">Pet Care Staff</p>
+                        <h2 class="section__heading">Meet Our Groomers</h2>
+                    </div>
+                    <div class="member__body">
+                        <div class="member__list">
+                            <!-- Member-item 1 -->
+                            <div class="member__item">
+                                <figure class="member-item__media">
+                                    <img src="./assets/img/member-01.png" alt="" class="member-item__img">
+                                </figure>
+                                <div class="member-item__info">
+                                    <p class="member-item__position">Pet Trainer</p>
+                                    <h3 class="member-item__title">Meghan Samit</h3>
+                                </div>
+                            </div>
+
+                            <!-- Member-item 2 -->
+                            <div class="member__item">
+                                <figure class="member-item__media">
+                                    <img src="./assets/img/member-02.png" alt="" class="member-item__img">
+                                </figure>
+                                <div class="member-item__info">
+                                    <p class="member-item__position">Veterinarian</p>
+                                    <h3 class="member-item__title">Alissa Silva</h3>
+                                </div>
+                            </div>
+
+                            <!-- Member-item 3 -->
+                            <div class="member__item">
+                                <figure class="member-item__media">
+                                    <img src="./assets/img/member-03.png" alt="" class="member-item__img">
+                                </figure>
+                                <div class="member-item__info">
+                                    <p class="member-item__position">Veterinarian</p>
+                                    <h3 class="member-item__title">Cindy Harris</h3>
+                                </div>
+                            </div>
+
+                            <!-- Member-item 4 -->
+                            <div class="member__item">
+                                <figure class="member-item__media">
+                                    <img src="./assets/img/member-04.png" alt="" class="member-item__img">
+                                </figure>
+                                <div class="member-item__info">
+                                    <p class="member-item__position">Animal Caretaker</p>
+                                    <h3 class="member-item__title">Lucas Tony</h3>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="member__cta-wrap">
+                            <a href="#!" class="btn btn--white member__cta">View All Team</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Pricing -->
+        <section class="pricing">
+            <div class="container">
+                <div class="pricing__inner">
+                    <div class="pricing__top">
+                        <h2 class="section__heading">The Best Choice</h2>
+                        <p class="pricing__desc section__desc">
+                            We offer long-term and short-term boarding. Every dog has its own private, spacious room and daily individual time in our large play yard.
+                        </p>
                     </div>
                 </div>
             </div>
