--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             </div>
         </section>
 
-        <!-- member -->
+        <!-- Member -->
         <section class="member">
             <div class="container">
                 <div class="member__inner">
@@ -351,6 +351,111 @@
                         <p class="pricing__desc section__desc">
                             We offer long-term and short-term boarding. Every dog has its own private, spacious room and daily individual time in our large play yard.
                         </p>
+                    </div>
+
+                    <div class="pricing__switch-wrap">
+                        <div class="pricing__switch-inner">
+                            <!-- Switch -->
+                            <div class="pricing__switch">
+                                <input
+                                type="checkbox"
+                                name=""
+                                id="pricing-switch"
+                                class="pricing__switch-input"
+                                checked
+                                hidden
+                                />
+                                <label for="pricing-switch"class="pricing__switch-label">
+                                    <span class="pricing__switch-value">
+                                        Monthly
+                                    </span>
+                                    <span class="pricing__switch-value">
+                                        Yearly
+                                    </span>
+                                </label>
+                            </div>
+
+                            <!-- Sale off -->
+                            <img src="./assets/icon/sale-off.svg" alt="Sale off" class="pricing__sale-off">
+                        </div>
+
+                        <div class="pricing__list">
+                            <!-- Pricing item 1 -->
+                            <div class="pricing__item">
+                                <p class="pricing-item__type">Basic</p>
+                                <h3 class="pricing-item__heading">Day care</h3>
+                                <p class="pricing-item__value">$150</p>
+                                <button  class="btn btn--white pricing-item__btn">Purchase Now</button>
+                                <ul class="pricing-item__list">
+                                    <li class="pricing-item__item not-working">Single room</li>
+                                    <li class="pricing-item__item">Socialist Exercise</li>
+                                    <li class="pricing-item__item">Custom Meals</li>
+                                    <li class="pricing-item__item">Spa and Grooming</li>
+                                    <li class="pricing-item__item">Excercise 2x</li>
+                                    <li class="pricing-item__item">Custom Meals</li>
+                                    <li class="pricing-item__item">Grooming 2x</li>
+                                </ul>
+                            </div>
+
+                            <!-- Pricing item 2 -->
+                            <div class="pricing__item">
+                                <p class="pricing-item__type">Exclusive</p>
+                                <h3 class="pricing-item__heading">2X Care</h3>
+                                <p class="pricing-item__value">$199</p>
+                                <button  class="btn  btn--white pricing-item__btn">Purchase Now</button>
+                                <ul class="pricing-item__list">
+                                    <li class="pricing-item__item">Single room</li>
+                                    <li class="pricing-item__item">Socialist Exercise</li>
+                                    <li class="pricing-item__item">Custom Meals</li>
+                                    <li class="pricing-item__item">Spa and Grooming</li>
+                                    <li class="pricing-item__item">Excercise 2x</li>
+                                    <li class="pricing-item__item">Custom Meals</li>
+                                    <li class="pricing-item__item">Grooming 2x</li>
+                                </ul>
+                            </div>
+
+                            <!-- Pricing item 3 -->
+                            <div class="pricing__item">
+                                <p class="pricing-item__type">Platinum</p>
+                                <h3 class="pricing-item__heading">4X Care</h3>
+                                <p class="pricing-item__value">$299</p>
+                                <button  class="btn btn--white pricing-item__btn">Purchase Now</button>
+                                <ul class="pricing-item__list">
+                                    <li class="pricing-item__item">Single room</li>
+                                    <li class="pricing-item__item">Socialist Exercise</li>
+                                    <li class="pricing-item__item">Custom Meals</li>
+                                    <li class="pricing-item__item">Spa and Grooming</li>
+                                    <li class="pricing-item__item">Excercise 2x</li>
+                                    <li class="pricing-item__item">Custom Meals</li>
+                                    <li class="pricing-item__item">Grooming 2x</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Review -->
+        <section class="review">
+            <div class="container">
+                <div class="review__inner">
+                    <a href="">
+                        <img src="./assets/icon/arrow-left.svg" alt="" class="review__btn review__btn-arrow-left review__icon">
+                    </a>
+                    <a href="#!">
+                        <img src="./assets/icon/arrow-right.svg" alt="" class="review__btn review__btn-arrow-right review__icon">
+                    </a>
+
+                    <div class="review__media">
+                        <img src="./assets/img/review-image.png" alt="" class="review__media-img">
+                    </div>
+                    <div class="review__content">
+                        <h2 class="section__heading review__heading">Our Reviews</h2>
+                        <p class="review__desc">
+                            “It was very comforting to recieve a text and pics each day about our pets and how they were doing. It was also nice that my pets were in the comfortable environment of their own home and received playfull attention from our pet sitters as well. Thanks so much!”
+                        </p>
+                        <p class="review__name">Karla Deras</p>
                     </div>
                 </div>
             </div>
