--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body style="height: 10000px;">
+<body>
     <header class="header">
         <div class="container">
             <div class="header__top">
